--- a/app/app.css
+++ b/app/app.css
@@ -1,6 +1,9 @@
 .container {
-  max-width: 760px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1em;
+  padding-right: 1em;
+  max-width: 768px;
 }
 .text-center {
   text-align: center;
