--- a/app/app.css
+++ b/app/app.css
@@ -1,10 +1,8 @@
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 1em;
-  padding-right: 1em;
-  max-width: 768px;
+.images img {
+  width: 200px;
+  height: 200px;
 }
-.text-center {
-  text-align: center;
+
+.footer {
+  padding: 10rem 0;
 }
